<resources>
    <string name="app_name">CalculatorOleksiiMakieievPZPI-17-1</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divideOperator">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiOperator">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minusOperator">-</string>
    <string name="_0">0</string>
    <string name="commaOperator">,</string>
    <string name="plusOperator">+</string>
    <string name="equalOperator">=</string>
    <string name="_0_0">0.0</string>
</resources>